--- a/src/index.css
+++ b/src/index.css
@@ -56,78 +56,12 @@ body {
   color:#60A5FA;
   font-weight: 600;
 }
-
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item {
+:where(.css-dev-only-do-not-override-pr0fja).ant-pagination.ant-pagination-simple .ant-pagination-simple-pager {
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  height: 24px;
   margin-inline-end: 8px;
-  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
-  line-height: 40px;
-  text-align: center;
-  vertical-align: middle;
-  list-style: none;
-  background-color: #f1f5f9;
-  border: 1px solid #e2e8f0;
-  border-radius: 50%;
-  outline: 0;
-  cursor: pointer;
-  user-select: none;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item a {
-  display: block;
-  padding: 0 6px;
-  color: rgba(0, 0, 0, 0.88);
+  font-size: 15.5px;
   font-weight: 600;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item-active {
-  font-weight: 600;
-  color: #fff;
-  background-color: #1677ff;
-  border-color: #1677ff;
-  transition: all 0.3s ease-in-out;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item-active a{
-  color: #fff;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item-active:hover {
-  background-color: #0e5bc7;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-item-active:hover a{
-  color: #fff;
-}
-
-.ant-pagination-item-link .anticon {
-  font-size: 18px;
-  font-weight: 900;
-}
-
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-prev, :where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-next, :where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-jump-prev, :where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-jump-next {
-  display: inline-block;
-  width: 42px;
-  height: 42px;
-  color: rgba(0, 0, 0, 0.88);
-  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
-  line-height: 42px;
-  text-align: center;
-  vertical-align: middle;
-  list-style: none;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: all 0.2s;
-}
-:where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-prev .ant-pagination-item-link, :where(.css-dev-only-do-not-override-pr0fja).ant-pagination .ant-pagination-next .ant-pagination-item-link {
-  display: block;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  font-size: 12px;
-  text-align: center;
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 50%;
-  outline: none;
-  transition: all 0.2s;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
